--- a/index.html
+++ b/index.html
@@ -8,4 +8,32 @@
 <body>
     
 </body>
+</html><!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ola mundo</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <header>
+        <h1>Hello World</h1>
+        <p>Que bom te ver por aqui, <span id="nome-usuario">Fulano</span></p>
+    </header>
+    <section>
+        <h2>HTML</h2>
+        <p>Hypertext Markup Language (em português, Linguagem de Marcação de Hipertexto) estrutura a sua página web</p>
+        <h2>CSS</h2>
+        <p>Cascading Style Sheets (em português, Folha de Estilo em Cascata) estiliza a sua página web</p>
+        <img src=" ./imagem/Olá Mundo.png" alt="ilustração de uma planeta e um texto escrito: ola mundo">
+    </section>
+    <footer>
+        <p>Uma página desenvolvida por Alura Start</p>
+    </footer>
+    <script src="script.js"></script>
+</body>
+
 </html>
